--- a/Lab_One/Task_two.html
+++ b/Lab_One/Task_two.html
@@ -117,8 +117,8 @@
     <center>
         <p>
             <i>a simple form</i><br>
-            <i>designed and developed by <b>Allyan Khan</b> contact at <a href="mailto:me.allyan45@gmail.com">me.allyan45@gmail.com</a></i><br>
-            <i>Copyright &copy; 2018 All Rights Reserved.</i>
+            <i>designed and developed by <b>Engr. Allyan Khan</b> contact at <a href="mailto:me.allyan45@gmail.com">me.allyan45@gmail.com</a></i><br>
+            <i>Copyright &copy; 2026  All Rights Reserved.</i>
         </p>
     </center>
 
