--- a/Lab_Work/Lab_Four/index.html
+++ b/Lab_Work/Lab_Four/index.html
@@ -6,26 +6,26 @@
 
 <!-- <script>    /*The head tag inclusion of the JS in HTML*/
         document.write("Welcome to the world most demanding language.");    /*Working as output*/
-    </script> -->
-    
-    <!--Referencing external JavaScript-->
-    <!-- <script src="script.js" defer></script> -->
+    </script> 
+     -->
+    <!-- Referencing external JavaScript
+    <script src="script.js" defer></script> -->
 </head>
 
 <body>
-    <!-- <p>There are three types to include JS into HTML page.</p>
+     <!-- <p>There are three types to include JS into HTML page.</p>
     <ul>
         <li>In the head tag</li>
         <li>In the body tag</li>
         <li>As External File</li>
-    </ul> -->
+    </ul>
     
-    <!-- <scrip>    /*Body tag inclusion of the JS in HTML. Better to use at bottom of HTML file*/
+     <script>    /*Body tag inclusion of the JS in HTML. Better to use at bottom of HTML file*/
         document.write("I am writing JS script in the body section of HMTL.");
-    </script>     -->
+    </script>      -->
 
    
-<script src="script.js"></script>
+<script src="script.js"></script> 
 </body>
 
 </html>
